--- a/app/mainWindow/app.global.scss
+++ b/app/mainWindow/app.global.scss
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2019 ExtraHash
+ * Copyright (C) 2020 Deeterd
  *
  * Please see the included LICENSE file for more information.
  *
